--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -19,12 +19,14 @@ section img {
   padding: 1em 0 4em 0.7em;
   @media (min-width: 1024px) {
     border-radius: 5em 5em 0 0;
-}
+  }
   h1 {
-    font-family: 'shrikhand' , cursive;
+    font-family: 'shrikhand';
+    font-weight: lighter;
     font-size: 4em;
     margin-left: 0.5em;
     @media (min-width: 1024px) {
+      text-align: center;
       font-size: 2.5em;
     }
   }
@@ -32,7 +34,7 @@ section img {
     position: absolute;
     margin-left: 6%;
     @media (min-width: 1024px) {
-      margin-left: 50%;
+      margin-left: 10%;
       bottom: 92%;
     }
     &:hover {
@@ -44,21 +46,21 @@ section img {
     margin-left: 6%;
     opacity: 0;
     @media (min-width: 1024px) {
-      margin-left: 50%;
+      margin-left: 10%;
       bottom: 92%;
     }
     &:hover {
       transform: scale(1.1);
-      transition: all 0.2s linear 0.2s;
+      transition: all 0.3s linear 0.2s;
       opacity: 1;
       background: linear-gradient(to bottom, #FF79da, #9356dc);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      -webkit-transform: scale(1.1);
-      -moz-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -o-transform: scale(1.1);
-  }
+      -webkit-transition: all 0.3s linear 0.2s;
+      -moz-transition: all 0.3s linear 0.2s;
+      -ms-transition: all 0.3s linear 0.2s;
+      -o-transition: all 0.3s linear 0.2s;
+}
   }
 }
 
@@ -73,6 +75,7 @@ section img {
 }
 
 .descript-menu {
+  cursor: pointer;
   position: relative;
   width: 95%;
   background-color: white;
@@ -82,22 +85,9 @@ section img {
  @media(min-width: 1024px){
     width: 28%;
     margin-right: 1em;
+    margin-bottom: 1em;
     border-radius: 20px;
     display: inline-block;
-  }
-  &:hover {
-    .fa-check-circle {
-      opacity: 1;
-    }
-    .anim-container {
-      opacity: 1;
-    }
-    .tarif {
-      transform: translateX(-8rem);
-      @media (min-width: 1024px) {
-        transform: translateX(-5em);
-      }
-    }
   }
     h3 {
       font-size: 1.6em;
@@ -105,62 +95,75 @@ section img {
       font-weight: bolder;
       @media (min-width: 1024px) {
         font-size: 1.3em;
+        padding-top: 0;
       }
     }
     p {
-      margin-top: -1em;
-      font-size: 0.9em;
-      font-weight: 100;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      padding-bottom: 1.7em;
+      font-weight: 50;
+      @media (min-width: 1024px) {
+        padding-bottom: 0.5em;
+      }
     } 
-    .tarif p {
-      margin-left: 85%;
-      font-size: 3em;
-      font-weight: bolder;
+    span {
+      float: right;
+      margin-right: 8%;
+      font-size: 3.5em;
+      font-weight: 600;
       @media (min-width: 1024px) {
         font-size: 1.5em;
       }
     }
     .anim-container {
-      opacity: 0;
+      transition: width 0.5s linear;
+      width: 0;
+      height: 100%;
       background-color:  #99e2d0;
       border-radius: 0 35px 35px 0;
       position: absolute;
-      left: 83%;
-      top: 2%;
-      @media (min-width: 1024px) {
-        left: 83%;
+      right: 0;
+      top: 0;
+      @media(min-width: 1024px){
+        right: 0;
+        top: 0;
         border-radius: 0 20px 20px 0;
-  }
-}
-  .fa-check-circle {
-    opacity: 0;
-    color: white;
-    font-size: 3em;
-    margin: 1.2em;
-    @media (min-width: 1024px) {
-      font-size: 2em;
-      margin: 0.6em;
+      }
     }
+    .fa-check-circle {
+      color: white;
+      font-size: 3em;
+      margin: 1.2em;
+      @media(min-width: 1024px) {
+        font-size: 2.4em;
+        margin-left: 0.4em;
+        margin-top: 1em;
+      }
+    }
+    &:hover {
+      .fa-check-circle {
+        animation: rotation .5s linear ;
+        -webkit-animation: rotation .5s linear ;
+}
+      .anim-container /*background icone check*/ {
+        width: 17%;
+      }
+      span { /*tarif*/
+        transform: translateX(-2em);
+        transition-duration: 1s;
+      }
+    }
+}
+
+@keyframes rotation { /*rotation icone check*/
+  from {
+      transform: rotate(270deg);
+} 
+  50% {
+      transform: rotate(315deg);
+} 
+  to {
+      transform: rotate(360deg);
   }
 }
-/*
-.descript-menu:hover {
-  .tarif {
-    transform: translateX(-3rem);
-    transform-origin: right;
-}
-  .anim-container {
-    position: absolute;
-    left: 90%;
-    top: 50%;
-    opacity: 1;
-    width: 5em;
-    height: 100%;
-    align-items: center;
-    background-color:  blue;
-  }
-  .fa-check-circle {
-    color: red;
-    font-size: 1em;
-  }
-}*/
