--- a/sass/style.css
+++ b/sass/style.css
@@ -28,9 +28,9 @@ body li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  animation: 4s accueil forwards;
+  animation: 6s accueil forwards;
   pointer-events: none;
-  -webkit-animation: 4s accueil forwards;
+  -webkit-animation: 6s accueil forwards;
 }
 
 @-webkit-keyframes accueil {
@@ -50,8 +50,8 @@ body li {
   font-size: 90px;
   letter-spacing: 25px;
   font-family: 'shrikhand' , cursive;
-  animation: 1s flash linear infinite;
-  -webkit-animation: 1s flash linear infinite;
+  animation: 2s flash linear infinite;
+  -webkit-animation: 2s flash linear infinite;
 }
 
 @-webkit-keyframes flash {
@@ -82,46 +82,6 @@ body li {
     color: #ff79da;
     text-shadow: 0 0 7px #ff79da;
   }
-}
-
-.lettre:nth-child(1) {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-}
-
-.lettre:nth-child(2) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-
-.lettre:nth-child(3) {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-
-.lettre:nth-child(4) {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-}
-
-.lettre:nth-child(5) {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-
-.lettre:nth-child(6) {
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-
-.lettre:nth-child(7) {
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
-}
-
-.lettre:nth-child(8) {
-  -webkit-animation-delay: 0.8s;
-          animation-delay: 0.8s;
 }
 
 .pied-de-page {
@@ -166,13 +126,15 @@ body li {
 
 header .logo {
   margin-left: 20%;
-  width: 40em;
+  margin-top: 2em;
+  width: 50%;
+  padding-bottom: 2em;
 }
 
 @media (min-width: 1024px) {
   header .logo {
-    width: 15em;
-    margin-left: 35%;
+    width: 20em;
+    margin-left: 40%;
   }
 }
 
@@ -184,21 +146,6 @@ header .logo {
   font-size: 3em;
   margin-left: 1em;
   color: black;
-}
-
-header .logo {
-  /*menu des restaurants */
-  margin-left: 20%;
-  margin-top: 2em;
-  width: 50%;
-  padding-bottom: 2em;
-}
-
-@media (min-width: 1024px) {
-  header .logo {
-    width: 20em;
-    margin-left: 40%;
-  }
 }
 
 section {
@@ -426,13 +373,15 @@ section img {
 }
 
 .carte-restaurant h1 {
-  font-family: 'shrikhand' , cursive;
+  font-family: 'shrikhand';
+  font-weight: lighter;
   font-size: 4em;
   margin-left: 0.5em;
 }
 
 @media (min-width: 1024px) {
   .carte-restaurant h1 {
+    text-align: center;
     font-size: 2.5em;
   }
 }
@@ -444,7 +393,7 @@ section img {
 
 @media (min-width: 1024px) {
   .carte-restaurant .icone-vide-menu {
-    margin-left: 50%;
+    margin-left: 10%;
     bottom: 92%;
   }
 }
@@ -461,24 +410,24 @@ section img {
 
 @media (min-width: 1024px) {
   .carte-restaurant .icone-plein-menu {
-    margin-left: 50%;
+    margin-left: 10%;
     bottom: 92%;
   }
 }
 
 .carte-restaurant .icone-plein-menu:hover {
-  transform: scale(1.1);
-  -webkit-transition: all 0.2s linear 0.2s;
-  transition: all 0.2s linear 0.2s;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  transition: all 0.3s linear 0.2s;
   opacity: 1;
   background: -webkit-gradient(linear, left top, left bottom, from(#FF79da), to(#9356dc));
   background: linear-gradient(to bottom, #FF79da, #9356dc);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
+  -webkit-transition: all 0.3s linear 0.2s;
+  -moz-transition: all 0.3s linear 0.2s;
+  -ms-transition: all 0.3s linear 0.2s;
+  -o-transition: all 0.3s linear 0.2s;
 }
 
 .carte-menu h2 {
@@ -495,6 +444,7 @@ section img {
 }
 
 .descript-menu {
+  cursor: pointer;
   position: relative;
   width: 95%;
   background-color: white;
@@ -508,28 +458,9 @@ section img {
   .descript-menu {
     width: 28%;
     margin-right: 1em;
+    margin-bottom: 1em;
     border-radius: 20px;
     display: inline-block;
-  }
-}
-
-.descript-menu:hover .fa-check-circle {
-  opacity: 1;
-}
-
-.descript-menu:hover .anim-container {
-  opacity: 1;
-}
-
-.descript-menu:hover .tarif {
-  -webkit-transform: translateX(-8rem);
-          transform: translateX(-8rem);
-}
-
-@media (min-width: 1024px) {
-  .descript-menu:hover .tarif {
-    -webkit-transform: translateX(-5em);
-            transform: translateX(-5em);
   }
 }
 
@@ -542,45 +473,57 @@ section img {
 @media (min-width: 1024px) {
   .descript-menu h3 {
     font-size: 1.3em;
+    padding-top: 0;
   }
 }
 
 .descript-menu p {
-  margin-top: -1em;
-  font-size: 0.9em;
-  font-weight: 100;
-}
-
-.descript-menu .tarif p {
-  margin-left: 85%;
-  font-size: 3em;
-  font-weight: bolder;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding-bottom: 1.7em;
+  font-weight: 50;
 }
 
 @media (min-width: 1024px) {
-  .descript-menu .tarif p {
+  .descript-menu p {
+    padding-bottom: 0.5em;
+  }
+}
+
+.descript-menu span {
+  float: right;
+  margin-right: 8%;
+  font-size: 3.5em;
+  font-weight: 600;
+}
+
+@media (min-width: 1024px) {
+  .descript-menu span {
     font-size: 1.5em;
   }
 }
 
 .descript-menu .anim-container {
-  opacity: 0;
+  -webkit-transition: width 0.5s linear;
+  transition: width 0.5s linear;
+  width: 0;
+  height: 100%;
   background-color: #99e2d0;
   border-radius: 0 35px 35px 0;
   position: absolute;
-  left: 83%;
-  top: 2%;
+  right: 0;
+  top: 0;
 }
 
 @media (min-width: 1024px) {
   .descript-menu .anim-container {
-    left: 83%;
+    right: 0;
+    top: 0;
     border-radius: 0 20px 20px 0;
   }
 }
 
 .descript-menu .fa-check-circle {
-  opacity: 0;
   color: white;
   font-size: 3em;
   margin: 1.2em;
@@ -588,32 +531,61 @@ section img {
 
 @media (min-width: 1024px) {
   .descript-menu .fa-check-circle {
-    font-size: 2em;
-    margin: 0.6em;
+    font-size: 2.4em;
+    margin-left: 0.4em;
+    margin-top: 1em;
   }
 }
 
-/*
-.descript-menu:hover {
-  .tarif {
-    transform: translateX(-3rem);
-    transform-origin: right;
+.descript-menu:hover .fa-check-circle {
+  animation: rotation .5s linear;
+  -webkit-animation: rotation .5s linear;
 }
-  .anim-container {
-    position: absolute;
-    left: 90%;
-    top: 50%;
-    opacity: 1;
-    width: 5em;
-    height: 100%;
-    align-items: center;
-    background-color:  blue;
+
+.descript-menu:hover .anim-container {
+  width: 17%;
+}
+
+.descript-menu:hover span {
+  /*tarif*/
+  -webkit-transform: translateX(-2em);
+          transform: translateX(-2em);
+  -webkit-transition-duration: 1s;
+          transition-duration: 1s;
+}
+
+@-webkit-keyframes rotation {
+  /*rotation icone check*/
+  from {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
   }
-  .fa-check-circle {
-    color: red;
-    font-size: 1em;
+  50% {
+    -webkit-transform: rotate(315deg);
+            transform: rotate(315deg);
   }
-}*/
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation {
+  /*rotation icone check*/
+  from {
+    -webkit-transform: rotate(270deg);
+            transform: rotate(270deg);
+  }
+  50% {
+    -webkit-transform: rotate(315deg);
+            transform: rotate(315deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
 #restaurants {
   background-color: #eaeaea;
   margin-top: 8em;
@@ -750,7 +722,6 @@ section img {
 }
 
 .icone-plein:hover {
-  transform: scale(1.1);
   -webkit-transition: all 0.2s linear 0.2s;
   transition: all 0.2s linear 0.2s;
   opacity: 1;
